@@ -3,6 +3,8 @@
 2026-01-09 - version 3.11.0
 * Update - WordPress 6.9 compatible.
 * Update - WooCommerce 10.4 compatible.
+* Fix - [CVE-2026-0549] Prevent potential stored XSS via shortcode.
+* Update - The [groups_group_info] shows user display_name instead of user_login when listing users and supports the none attribute.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
